   higher.
 - (tim) Fix typo. s/SETEIUD_BREAKS_SETUID/SETEUID_BREAKS_SETUID/
 - (tim) [configure.ac] Bug 665: move 3 new AC_DEFINES outside of AC_TRY_RUN.
   Report by distler AT golem ph utexas edu.
 - (dtucker) [contrib/aix/pam.conf] Include example pam.conf for AIX from
   article by genty at austin.ibm.com, included with the author's permission.

20030919
 - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
   djast AT cs.toronto.edu
 - (djm) Bug #661: Remove duplicate check for basename; from 
   bugzilla-openssh AT thewrittenword.com
 - (djm) Bug #641: Allow RedHat RPM building without GTK-2; Patch from
   jason AT devrandom.org
 - (djm) Bug #646: Fix location of x11-ssh-askpass; Jim
 - (dtucker) [openbsd-compat/port-aix.h] Bug #640: Don't include audit.h
   unless required.  Reorder to reduce warnings.
 - (dtucker) [session.c] Bug #643: Fix size_t -> u_int and fix null deref
   when /etc/default/login doesn't exist or isn't readable.  Fixes from
   jparsons-lists at saffron.net and georg.oppenberg at deu mci com.
 - (dtucker) [acconfig.h] Updated basename test needs HAVE_BASENAME

20030918
 - (djm) Bug #652: Fix empty password auth

20030917
 - (djm) Sync with V_3_7 branch
 - (djm) OpenBSD Sync
   - markus@cvs.openbsd.org 2003/09/16 21:02:40
     [buffer.c channels.c version.h]
     more malloc/fatal fixes; ok millert/deraadt; ghudson at MIT.EDU
 - (djm) Crank RPM spec file versions
 - (tim) [openbsd-compat/inet_ntoa.c] 20030917 "Sync with V_3_7 branch" undid
   20030916 "Missed dead header in inet_ntoa.c"
 
20030916
 - (dtucker) [acconfig.h configure.ac defines.h session.c] Bug #252: Retrieve
   PATH (or SUPATH) and UMASK from /etc/default/login on platforms that have it
   (eg Solaris, Reliant Unix).  Patch from Robert.Dahlem at siemens.com.  
   ok djm@
 - (bal) OpenBSD Sync
   - deraadt@cvs.openbsd.org 2003/09/16 03:03:47
     [buffer.c]
     do not expand buffer before attempting to reallocate it; markus ok