@@ -29,6 +29,10 @@
    Report by distler AT golem ph utexas edu.
  - (dtucker) [contrib/aix/pam.conf] Include example pam.conf for AIX from
    article by genty at austin.ibm.com, included with the author's permission.
+ - (dtucker) OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2003/09/18 07:52:54
+     [sshconnect.c]
+     missing {}; bug #656; jclonguet at free.fr
 
 20030919
  - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
@@ -1165,4 +1169,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3023 2003/09/22 10:41:40 dtucker Exp $
+$Id: ChangeLog,v 1.3024 2003/09/22 10:59:16 dtucker Exp $
